# mandelbrotgpu3-windows

./: README.md
cmake/opencl/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  cmake_install.cmake  main-opengl.cxx  main.vcxproj  mandelbrotgpu3-windows-opencl.sln  mandelbrotgpu3-windows-opencl.vcxproj
cmake/opencl/Debug/: kernel.cl
cmake/opencl/main.dir/Debug/: main.exe.recipe
cmake/opencl/main.dir/Debug/main.tlog/: CL.write.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cmake/opencl/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
cmake/opencl/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog
mandelbrotgpu3-windows/cmake/cuda/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main-cuda.cu  mandelbrotgpu3-windows-cuda.sln  mandelbrotgpu3-windws-cuda.vcxproj.filters
mandelbrotgpu3-windows/cmake/cuda/Debug/: mandelbrotgpu3-windws-cuda.exp  mandelbrotgpu3-windws-cuda.lib
mandelbrotgpu3-windows/cmake/cuda/mandelbrotgpu3-windws-cuda.dir/Debug/: mandelbrotgpu3-windws-cuda.ilk
mandelbrotgpu3-windows/cmake/cuda/mandelbrotgpu3-windws-cuda.dir/Debug/mandelbr.16D18C1E.tlog/: CudaCompile.read.1u.tlog  link.secondary.1.tlog
mandelbrotgpu3-windows/cmake/cuda/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
mandelbrotgpu3-windows/cmake/opencl/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main-opengl.cxx  main.vcxproj.filters  mandelbrotgpu3-windows-opencl.sln  mandelbrotgpu3-windows-opencl.vcxproj
mandelbrotgpu3-windows/cmake/opencl/Debug/: kernel.cl
mandelbrotgpu3-windows/cmake/opencl/main.dir/Debug/: main.ilk
mandelbrotgpu3-windows/cmake/opencl/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+3 more)
(+34 files in other folders)
